package com.engineer.lrogozinski;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;
import org.springframework.transaction.annotation.EnableTransactionManagement;

@SpringBootApplication
public class LrogozinskiApplication {

    public static void main(String[] args) {
        SpringApplication.run(LrogozinskiApplication.class, args);
    }
}
